# yutto-uiya

./: .gitignore  .gitmodules  README.md  conda_setup.bat  conda_setup.sh  environment.yml  index.html  justfile  package-lock.json  package.json  pyproject.toml  setup.bat  setup.sh  tsconfig.app.json  tsconfig.node.json  uiya.toml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint-and-fmt.yml  release.yml  unit-test.yml
config/: uiya.toml
docs/: guide.md
docs/superpowers/plans/: 2026-04-04-console-skeleton.md  2026-04-04-day-night-theme.md  2026-04-04-huixin-branding.md  2026-04-04-tauri-react-launcher-ui.md
docs/superpowers/specs/: 2026-04-04-day-night-theme-design.md  2026-04-04-huixin-brand-readme-logo-design.md  2026-04-04-tauri-react-launcher-ui-design.md  2026-04-10-favlist-grouped-parse-design.md
python/uiya/: __init__.py  __version__.py  _dataclass.py  _session_keys.py  cli.py  yutto_uiya.py
python/uiya/utils/: TextHelper.py  config.py
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/runtime/: commands.rs  mod.rs  models.rs  process.rs  state.rs
src/app/: App.test.tsx  App.tsx  providers.tsx  routes.tsx
src/components/home/FolderCard/: FolderCard.tsx
src/components/home/FolderGrid/: FolderGrid.tsx
src/components/home/HeroBanner/: HeroBanner.tsx
src/components/home/NoticePanel/: NoticePanel.tsx
src/components/models/ModelCard/: ModelCard.tsx
src/components/navigation/NavItem/: NavItem.tsx
src/components/navigation/Sidebar/: Sidebar.tsx
src/components/settings/SettingCard/: SettingCard.tsx
src/components/settings/SettingRow/: SettingRow.tsx
src/components/settings/SettingsTabs/: SettingsTabs.tsx
src/components/settings/ToggleSwitch/: ToggleSwitch.tsx
src/components/window/Topbar/: Topbar.test.tsx  Topbar.tsx
src/components/window/WindowControls/: WindowControls.test.tsx  WindowControls.tsx
src/data/: home.ts  nav.ts  settings.ts
src/layouts/AppShell/: AppShell.test.tsx  AppShell.tsx
src/pages/CommunityPage/: CommunityPage.tsx
src/pages/ConsolePage/: ConsolePage.test.tsx  ConsolePage.tsx
src/pages/DownloadPage/: DownloadPage.test.tsx  DownloadPage.tsx
src/pages/HomePage/: HomePage.test.tsx  HomePage.tsx
src/pages/ModelsPage/: ModelsPage.test.tsx  ModelsPage.tsx
src/pages/PlaceholderPage/: PlaceholderPage.tsx
src/pages/SettingsPage/: SettingsPage.test.tsx  SettingsPage.tsx
src/pages/TroubleshootingPage/: TroubleshootingPage.tsx
src/pages/VersionsPage/: VersionsPage.tsx
src/services/desktop/: window.ts
src/services/launcher/: launcher.test.ts  launcher.ts
src/services/runtime/: bridge.ts  runtime.test.ts  runtime.ts
src/services/theme/: theme.test.ts  theme.ts
src/styles/: community.css  console.css  global.css  home.css  model-card.css  models.css  settings.css  shell.css  tokens.css  troubleshooting.css  versions.css
src/uiya/: __version__.py  _dataclass.py  _dictionary.py  _session_keys.py  _typing.py  api.py  test.py  yutto_uiya.py
src/uiya/styles/: global_style.py
src/uiya/tests/: test_command_generator.py  test_settings.py
src/uiya/utils/: TextHelper.py  config.py  resolve_path.py  runner.py  subproc.py
src/uiya/yutto/: bangumi.py  user_videos.py
tests/: test_cli.py  test_command_generator.py  test_settings.py
