[package]
name = "yutto-uiya"
version = "0.0.3"
description = "yutto-uiya desktop launcher"
authors = ["MrXnneHang"]
license = "MIT"
repository = "https://github.com/MrXnneHang/yutto-uiya"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yutto_uiya_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
